--- a/about.html
+++ b/about.html
@@ -3,23 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Health Supplements Store - Home</title>
+    <title>Health Supplements Store - About</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .hero {
-            background: url('https://via.placeholder.com/1500x500') no-repeat center center;
-            background-size: cover;
-            height: 500px;
-            color: white;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-        }
-        .hero h1 {
-            font-size: 4rem;
-        }
-    </style>
 </head>
 <body>
     <!-- Navbar -->
@@ -30,13 +15,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="products.html">Products</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
@@ -46,12 +31,12 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <div class="hero">
-        <div>
-            <h1>Welcome to Health Supplements Store</h1>
-            <p>Your one-stop shop for all your health supplement needs.</p>
-        </div>
+    <!-- About Section -->
+    <div class="container my-5">
+        <h2 class="text-center mb-4">About Us</h2>
+        <p>Welcome to Health Supplements Store! We are dedicated to providing you with the best health supplements to support your wellness journey. Our products are sourced from trusted manufacturers and are designed to help you achieve your health goals.</p>
+        <p>Our mission is to make high-quality health supplements accessible to everyone. We believe in the power of natural ingredients and strive to offer products that are both effective and safe.</p>
+        <p>Thank you for choosing Health Supplements Store. We look forward to serving you!</p>
     </div>
 
     <!-- Footer -->
