--- a/about.html
+++ b/about.html
@@ -5,10 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Health Supplements Store - About</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .navbar {
+            background-color: #4CAF50;
+        }
+        .navbar-brand, .nav-link {
+            color: white !important;
+        }
+        .footer {
+            background-color: #4CAF50;
+            color: white;
+        }
+        .about-section {
+            background-color: #f9f9f9;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="index.html">Health Supplements</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -34,13 +52,15 @@
     <!-- About Section -->
     <div class="container my-5">
         <h2 class="text-center mb-4">About Us</h2>
-        <p>Welcome to Health Supplements Store! We are dedicated to providing you with the best health supplements to support your wellness journey. Our products are sourced from trusted manufacturers and are designed to help you achieve your health goals.</p>
-        <p>Our mission is to make high-quality health supplements accessible to everyone. We believe in the power of natural ingredients and strive to offer products that are both effective and safe.</p>
-        <p>Thank you for choosing Health Supplements Store. We look forward to serving you!</p>
+        <div class="about-section">
+            <p>Welcome to Health Supplements Store! We are dedicated to providing you with the best health supplements to support your wellness journey. Our products are sourced from trusted manufacturers and are designed to help you achieve your health goals.</p>
+            <p>Our mission is to make high-quality health supplements accessible to everyone. We believe in the power of natural ingredients and strive to offer products that are both effective and safe.</p>
+            <p>Thank you for choosing Health Supplements Store. We look forward to serving you!</p>
+        </div>
     </div>
 
     <!-- Footer -->
-    <footer class="bg-light text-center py-4">
+    <footer class="footer text-center py-4">
         <p>© 2024 Health Supplements Store. All rights reserved.</p>
         <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
     </footer>
