--- a/index.html
+++ b/index.html
@@ -19,11 +19,21 @@
         .hero h1 {
             font-size: 4rem;
         }
+        .navbar {
+            background-color: #4CAF50;
+        }
+        .navbar-brand, .nav-link {
+            color: white !important;
+        }
+        .footer {
+            background-color: #4CAF50;
+            color: white;
+        }
     </style>
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="index.html">Health Supplements</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -55,7 +65,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="bg-light text-center py-4">
+    <footer class="footer text-center py-4">
         <p>© 2024 Health Supplements Store. All rights reserved.</p>
         <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
     </footer>
